--- a/roles/vpc/tasks/main.yml
+++ b/roles/vpc/tasks/main.yml
@@ -155,24 +155,24 @@
   register: flowlogs_role
   when: enable_flow_logs
 
-- name: Enable VPC Flow Logs
-  amazon.aws.ec2_vpc_flow_log_info:
-    filters:
-      vpc-id: "{{ vpc_id }}"
-    region: "{{ aws_region }}"
+- name: Check existing VPC Flow Logs
+  shell: >
+    aws ec2 describe-flow-logs --filter Name=resource-id,Values={{ vpc_id }} --region {{ aws_region }} --output json
   register: existing_flow_logs
   when: enable_flow_logs
+  changed_when: false
 
-- name: Create VPC Flow Log if not exists
-  amazon.aws.ec2_vpc_flow_log:
-    vpc_id: "{{ vpc_id }}"
-    traffic_type: "ALL"
-    log_destination_type: "cloud-watch-logs"
-    log_group_name: "{{ vpc_flow_log_group }}"
-    deliver_logs_permission_arn: "{{ flowlogs_role.arn }}"
-    region: "{{ aws_region }}"
-    state: present
-  when: enable_flow_logs and flowlogs_role is defined and (existing_flow_logs.flow_logs | length == 0)
+- name: Enable VPC Flow Logs
+  shell: >
+    aws ec2 create-flow-logs 
+    --resource-type VPC 
+    --resource-ids {{ vpc_id }} 
+    --traffic-type ALL 
+    --log-destination-type cloud-watch-logs
+    --log-group-name {{ vpc_flow_log_group }}
+    --deliver-logs-permission-arn {{ flowlogs_role.arn }}
+    --region {{ aws_region }}
+  when: enable_flow_logs and flowlogs_role is defined and (existing_flow_logs.stdout | from_json).FlowLogs | length == 0
 
 - name: Display VPC deployment summary
   debug:
