Fix: Change policy_document to policy_json in IAM policy task

--- a/roles/vpc/tasks/main.yml
+++ b/roles/vpc/tasks/main.yml
@@ -158,7 +158,7 @@
     iam_type: role
     iam_name: "{{ vpc_name }}-flowlogs-role"
     policy_name: "VPCFlowLogsDeliveryPolicy"
-    policy_document: |
+    policy_json: |
       {
         "Version": "2012-10-17",
         "Statement": [
