--- a/roles/vpc/tasks/main.yml
+++ b/roles/vpc/tasks/main.yml
@@ -80,11 +80,24 @@
   set_fact:
     database_subnet_ids: "{{ database_subnets_info.results | map(attribute='subnet.id') | list }}"
 
+- name: Check for unused Elastic IPs
+  shell: >
+    aws ec2 describe-addresses --region {{ aws_region }} --query 'Addresses[?AssociationId==null]'
+  register: unused_eips
+  changed_when: false
+  when: enable_nat_gateway
+
+- name: Display unused Elastic IPs
+  debug:
+    msg: "Found {{ (unused_eips.stdout | from_json) | length }} unused Elastic IPs"
+  when: enable_nat_gateway
+
 - name: Allocate Elastic IP for NAT Gateway
   ec2_eip:
     region: "{{ aws_region }}"
     in_vpc: true
     state: present
+    reuse_existing_ip_allowed: true
     tags: "{{ common_tags | combine({'Name': nat_eip_name, 'Type': 'ElasticIP'}) }}"
   register: nat_eip
   when: enable_nat_gateway
