--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -150,17 +150,56 @@
     vpc_id: "{{ vpc_id }}"
     region: "{{ aws_region }}"
     subnets: "{{ public_subnet_ids }}"
-    rules:
-      # Inbound rules
-      - [100, 'tcp', 'allow', '0.0.0.0/0', null, null, 80, 80]      # HTTP
-      - [110, 'tcp', 'allow', '0.0.0.0/0', null, null, 443, 443]   # HTTPS
-      - [120, 'tcp', 'allow', '0.0.0.0/0', null, null, 22, 22]     # SSH
-      - [130, 'tcp', 'allow', '0.0.0.0/0', null, null, 1024, 65535] # Ephemeral ports
-      # Outbound rules
-      - [100, 'tcp', 'allow', null, '0.0.0.0/0', 80, 80, null]     # HTTP
-      - [110, 'tcp', 'allow', null, '0.0.0.0/0', 443, 443, null]   # HTTPS
-      - [120, 'tcp', 'allow', null, '0.0.0.0/0', 22, 22, null]     # SSH
-      - [130, 'tcp', 'allow', null, '0.0.0.0/0', 1024, 65535, null] # Ephemeral ports
+    ingress:
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 80
+        to_port: 80
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 443
+        to_port: 443
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 22
+        to_port: 22
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 1024
+        to_port: 65535
+    egress:
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 80
+        to_port: 80
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 443
+        to_port: 443
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 22
+        to_port: 22
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 1024
+        to_port: 65535
     tags: "{{ common_tags | combine({'Name': public_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: public_nacl
 
@@ -170,18 +209,62 @@
     vpc_id: "{{ vpc_id }}"
     region: "{{ aws_region }}"
     subnets: "{{ private_subnet_ids }}"
-    rules:
-      # Inbound rules
-      - [100, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 22, 22]       # SSH from VPC
-      - [110, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 80, 80]       # HTTP from VPC
-      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 443, 443]     # HTTPS from VPC
-      - [130, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 8080, 8080]   # App port from VPC
-      - [140, 'tcp', 'allow', '0.0.0.0/0', null, null, 1024, 65535]      # Ephemeral ports
-      # Outbound rules
-      - [100, 'tcp', 'allow', null, '0.0.0.0/0', 80, 80, null]           # HTTP
-      - [110, 'tcp', 'allow', null, '0.0.0.0/0', 443, 443, null]         # HTTPS
-      - [120, 'tcp', 'allow', null, '{{ vpc_cidr }}', 22, 22, null]       # SSH to VPC
-      - [130, 'tcp', 'allow', null, '{{ vpc_cidr }}', 1024, 65535, null]  # Ephemeral to VPC
+    ingress:
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 22
+        to_port: 22
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 80
+        to_port: 80
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 443
+        to_port: 443
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 8080
+        to_port: 8080
+      - rule_no: 140
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 1024
+        to_port: 65535
+    egress:
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 80
+        to_port: 80
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 443
+        to_port: 443
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 22
+        to_port: 22
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 1024
+        to_port: 65535
     tags: "{{ common_tags | combine({'Name': private_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: private_nacl
 
@@ -191,16 +274,50 @@
     vpc_id: "{{ vpc_id }}"
     region: "{{ aws_region }}"
     subnets: "{{ database_subnet_ids }}"
-    rules:
-      # Inbound rules
-      - [100, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 22, 22]       # SSH from VPC
-      - [110, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 3306, 3306]   # MySQL from VPC
-      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 5432, 5432]   # PostgreSQL from VPC
-      - [130, 'tcp', 'allow', '0.0.0.0/0', null, null, 1024, 65535]      # Ephemeral ports
-      # Outbound rules
-      - [100, 'tcp', 'allow', null, '0.0.0.0/0', 80, 80, null]           # HTTP for updates
-      - [110, 'tcp', 'allow', null, '0.0.0.0/0', 443, 443, null]         # HTTPS for updates
-      - [120, 'tcp', 'allow', null, '{{ vpc_cidr }}', 1024, 65535, null]  # Ephemeral to VPC
+    ingress:
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 22
+        to_port: 22
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 3306
+        to_port: 3306
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 5432
+        to_port: 5432
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 1024
+        to_port: 65535
+    egress:
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 80
+        to_port: 80
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_ipv4: 0.0.0.0/0
+        from_port: 443
+        to_port: 443
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_ipv4: "{{ vpc_cidr }}"
+        from_port: 1024
+        to_port: 65535
     tags: "{{ common_tags | combine({'Name': db_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: db_nacl
 
