--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -151,15 +151,15 @@
     region: "{{ aws_region }}"
     subnets: "{{ public_subnet_ids }}"
     ingress:
-      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80]     # HTTP
-      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443]   # HTTPS
-      - [120, 'tcp', 'allow', '0.0.0.0/0', 22, 22]     # SSH
-      - [130, 'tcp', 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
+      - [100, 'tcp', 'allow', '0.0.0.0/0', null, null, 80, 80]      # HTTP
+      - [110, 'tcp', 'allow', '0.0.0.0/0', null, null, 443, 443]    # HTTPS
+      - [120, 'tcp', 'allow', '0.0.0.0/0', null, null, 22, 22]      # SSH
+      - [130, 'tcp', 'allow', '0.0.0.0/0', null, null, 1024, 65535] # Ephemeral ports
     egress:
-      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80]     # HTTP
-      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443]   # HTTPS
-      - [120, 'tcp', 'allow', '0.0.0.0/0', 22, 22]     # SSH
-      - [130, 'tcp', 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
+      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80, null, null]      # HTTP
+      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443, null, null]    # HTTPS
+      - [120, 'tcp', 'allow', '0.0.0.0/0', 22, 22, null, null]      # SSH
+      - [130, 'tcp', 'allow', '0.0.0.0/0', 1024, 65535, null, null] # Ephemeral ports
     tags: "{{ common_tags | combine({'Name': public_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: public_nacl
 
@@ -170,16 +170,16 @@
     region: "{{ aws_region }}"
     subnets: "{{ private_subnet_ids }}"
     ingress:
-      - [100, 'tcp', 'allow', '{{ vpc_cidr }}', 22, 22]       # SSH from VPC
-      - [110, 'tcp', 'allow', '{{ vpc_cidr }}', 80, 80]       # HTTP from VPC
-      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', 443, 443]     # HTTPS from VPC
-      - [130, 'tcp', 'allow', '{{ vpc_cidr }}', 8080, 8080]   # App port from VPC
-      - [140, 'tcp', 'allow', '0.0.0.0/0', 1024, 65535]      # Ephemeral ports
+      - [100, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 22, 22]       # SSH from VPC
+      - [110, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 80, 80]       # HTTP from VPC
+      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 443, 443]     # HTTPS from VPC
+      - [130, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 8080, 8080]   # App port from VPC
+      - [140, 'tcp', 'allow', '0.0.0.0/0', null, null, 1024, 65535]      # Ephemeral ports
     egress:
-      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80]           # HTTP
-      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443]         # HTTPS
-      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', 22, 22]       # SSH to VPC
-      - [130, 'tcp', 'allow', '{{ vpc_cidr }}', 1024, 65535]  # Ephemeral to VPC
+      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80, null, null]           # HTTP
+      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443, null, null]         # HTTPS
+      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', 22, 22, null, null]       # SSH to VPC
+      - [130, 'tcp', 'allow', '{{ vpc_cidr }}', 1024, 65535, null, null]  # Ephemeral to VPC
     tags: "{{ common_tags | combine({'Name': private_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: private_nacl
 
@@ -190,14 +190,14 @@
     region: "{{ aws_region }}"
     subnets: "{{ database_subnet_ids }}"
     ingress:
-      - [100, 'tcp', 'allow', '{{ vpc_cidr }}', 22, 22]       # SSH from VPC
-      - [110, 'tcp', 'allow', '{{ vpc_cidr }}', 3306, 3306]   # MySQL from VPC
-      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', 5432, 5432]   # PostgreSQL from VPC
-      - [130, 'tcp', 'allow', '0.0.0.0/0', 1024, 65535]      # Ephemeral ports
+      - [100, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 22, 22]       # SSH from VPC
+      - [110, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 3306, 3306]   # MySQL from VPC
+      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', null, null, 5432, 5432]   # PostgreSQL from VPC
+      - [130, 'tcp', 'allow', '0.0.0.0/0', null, null, 1024, 65535]      # Ephemeral ports
     egress:
-      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80]           # HTTP for updates
-      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443]         # HTTPS for updates
-      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', 1024, 65535]  # Ephemeral to VPC
+      - [100, 'tcp', 'allow', '0.0.0.0/0', 80, 80, null, null]           # HTTP for updates
+      - [110, 'tcp', 'allow', '0.0.0.0/0', 443, 443, null, null]         # HTTPS for updates
+      - [120, 'tcp', 'allow', '{{ vpc_cidr }}', 1024, 65535, null, null]  # Ephemeral to VPC
     tags: "{{ common_tags | combine({'Name': db_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: db_nacl
 
