Update NACL rules to use 'all' protocol instead of -1

--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -151,15 +151,15 @@
     region: "{{ aws_region }}"
     subnets: "{{ public_subnet_ids }}"
     ingress:
-      - [100, -1, 'allow', '0.0.0.0/0', 80, 80]      # HTTP
-      - [110, -1, 'allow', '0.0.0.0/0', 443, 443]    # HTTPS
-      - [120, -1, 'allow', '0.0.0.0/0', 22, 22]      # SSH
-      - [130, -1, 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
+      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]      # HTTP
+      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]    # HTTPS
+      - [120, 'all', 'allow', '0.0.0.0/0', 22, 22]      # SSH
+      - [130, 'all', 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
     egress:
-      - [100, -1, 'allow', '0.0.0.0/0', 80, 80]      # HTTP
-      - [110, -1, 'allow', '0.0.0.0/0', 443, 443]    # HTTPS
-      - [120, -1, 'allow', '0.0.0.0/0', 22, 22]      # SSH
-      - [130, -1, 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
+      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]      # HTTP
+      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]    # HTTPS
+      - [120, 'all', 'allow', '0.0.0.0/0', 22, 22]      # SSH
+      - [130, 'all', 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
     tags: "{{ common_tags | combine({'Name': public_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: public_nacl
 
@@ -170,16 +170,16 @@
     region: "{{ aws_region }}"
     subnets: "{{ private_subnet_ids }}"
     ingress:
-      - [100, -1, 'allow', '{{ vpc_cidr }}', 22, 22]      # SSH from VPC
-      - [110, -1, 'allow', '{{ vpc_cidr }}', 80, 80]      # HTTP from VPC
-      - [120, -1, 'allow', '{{ vpc_cidr }}', 443, 443]    # HTTPS from VPC
-      - [130, -1, 'allow', '{{ vpc_cidr }}', 8080, 8080]  # App port from VPC
-      - [140, -1, 'allow', '0.0.0.0/0', 1024, 65535]     # Ephemeral ports
+      - [100, 'all', 'allow', '{{ vpc_cidr }}', 22, 22]      # SSH from VPC
+      - [110, 'all', 'allow', '{{ vpc_cidr }}', 80, 80]      # HTTP from VPC
+      - [120, 'all', 'allow', '{{ vpc_cidr }}', 443, 443]    # HTTPS from VPC
+      - [130, 'all', 'allow', '{{ vpc_cidr }}', 8080, 8080]  # App port from VPC
+      - [140, 'all', 'allow', '0.0.0.0/0', 1024, 65535]     # Ephemeral ports
     egress:
-      - [100, -1, 'allow', '0.0.0.0/0', 80, 80]          # HTTP
-      - [110, -1, 'allow', '0.0.0.0/0', 443, 443]        # HTTPS
-      - [120, -1, 'allow', '{{ vpc_cidr }}', 22, 22]     # SSH to VPC
-      - [130, -1, 'allow', '{{ vpc_cidr }}', 1024, 65535]  # Ephemeral to VPC
+      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]          # HTTP
+      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]        # HTTPS
+      - [120, 'all', 'allow', '{{ vpc_cidr }}', 22, 22]     # SSH to VPC
+      - [130, 'all', 'allow', '{{ vpc_cidr }}', 1024, 65535]  # Ephemeral to VPC
     tags: "{{ common_tags | combine({'Name': private_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: private_nacl
 
@@ -190,14 +190,14 @@
     region: "{{ aws_region }}"
     subnets: "{{ database_subnet_ids }}"
     ingress:
-      - [100, -1, 'allow', '{{ vpc_cidr }}', 22, 22]        # SSH from VPC
-      - [110, -1, 'allow', '{{ vpc_cidr }}', 3306, 3306]    # MySQL from VPC
-      - [120, -1, 'allow', '{{ vpc_cidr }}', 5432, 5432]    # PostgreSQL from VPC
-      - [130, -1, 'allow', '0.0.0.0/0', 1024, 65535]       # Ephemeral ports
+      - [100, 'all', 'allow', '{{ vpc_cidr }}', 22, 22]        # SSH from VPC
+      - [110, 'all', 'allow', '{{ vpc_cidr }}', 3306, 3306]    # MySQL from VPC
+      - [120, 'all', 'allow', '{{ vpc_cidr }}', 5432, 5432]    # PostgreSQL from VPC
+      - [130, 'all', 'allow', '0.0.0.0/0', 1024, 65535]       # Ephemeral ports
     egress:
-      - [100, -1, 'allow', '0.0.0.0/0', 80, 80]           # HTTP for updates
-      - [110, -1, 'allow', '0.0.0.0/0', 443, 443]         # HTTPS for updates
-      - [120, -1, 'allow', '{{ vpc_cidr }}', 1024, 65535] # Ephemeral to VPC
+      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]           # HTTP for updates
+      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]         # HTTPS for updates
+      - [120, 'all', 'allow', '{{ vpc_cidr }}', 1024, 65535] # Ephemeral to VPC
     tags: "{{ common_tags | combine({'Name': db_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: db_nacl
 
