fix: Update Network ACL rule format to use proper dictionary structure

--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -150,16 +150,18 @@
     vpc_id: "{{ vpc_id }}"
     region: "{{ aws_region }}"
     subnets: "{{ public_subnet_ids }}"
-    ingress:
-      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]      # HTTP
-      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]    # HTTPS
-      - [120, 'all', 'allow', '0.0.0.0/0', 22, 22]      # SSH
-      - [130, 'all', 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
-    egress:
-      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]      # HTTP
-      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]    # HTTPS
-      - [120, 'all', 'allow', '0.0.0.0/0', 22, 22]      # SSH
-      - [130, 'all', 'allow', '0.0.0.0/0', 1024, 65535] # Ephemeral ports
+    ingress: "{{ public_nacl_ingress | default([
+      {'rule_no': 100, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 80, 'to_port': 80},      # HTTP
+      {'rule_no': 110, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 443, 'to_port': 443},    # HTTPS
+      {'rule_no': 120, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 22, 'to_port': 22},      # SSH
+      {'rule_no': 130, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 1024, 'to_port': 65535}  # Ephemeral ports
+    ]) }}"
+    egress: "{{ public_nacl_egress | default([
+      {'rule_no': 100, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 80, 'to_port': 80},      # HTTP
+      {'rule_no': 110, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 443, 'to_port': 443},    # HTTPS
+      {'rule_no': 120, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 22, 'to_port': 22},      # SSH
+      {'rule_no': 130, 'protocol': 'tcp', 'action': 'allow', 'cidr_block': '0.0.0.0/0', 'from_port': 1024, 'to_port': 65535}  # Ephemeral ports
+    ]) }}"
     tags: "{{ common_tags | combine({'Name': public_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: public_nacl
 
@@ -170,16 +172,61 @@
     region: "{{ aws_region }}"
     subnets: "{{ private_subnet_ids }}"
     ingress:
-      - [100, 'all', 'allow', '{{ vpc_cidr }}', 22, 22]      # SSH from VPC
-      - [110, 'all', 'allow', '{{ vpc_cidr }}', 80, 80]      # HTTP from VPC
-      - [120, 'all', 'allow', '{{ vpc_cidr }}', 443, 443]    # HTTPS from VPC
-      - [130, 'all', 'allow', '{{ vpc_cidr }}', 8080, 8080]  # App port from VPC
-      - [140, 'all', 'allow', '0.0.0.0/0', 1024, 65535]     # Ephemeral ports
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 22
+        to_port: 22      # SSH from VPC
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 80
+        to_port: 80      # HTTP from VPC
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 443
+        to_port: 443     # HTTPS from VPC
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 8080
+        to_port: 8080    # App port from VPC
+      - rule_no: 140
+        protocol: tcp
+        action: allow
+        cidr_block: "0.0.0.0/0"
+        from_port: 1024
+        to_port: 65535   # Ephemeral ports
     egress:
-      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]          # HTTP
-      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]        # HTTPS
-      - [120, 'all', 'allow', '{{ vpc_cidr }}', 22, 22]     # SSH to VPC
-      - [130, 'all', 'allow', '{{ vpc_cidr }}', 1024, 65535]  # Ephemeral to VPC
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_block: "0.0.0.0/0"
+        from_port: 80
+        to_port: 80      # HTTP
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_block: "0.0.0.0/0"
+        from_port: 443
+        to_port: 443     # HTTPS
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 22
+        to_port: 22      # SSH to VPC
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 1024
+        to_port: 65535   # Ephemeral to VPC
     tags: "{{ common_tags | combine({'Name': private_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: private_nacl
 
@@ -190,14 +237,49 @@
     region: "{{ aws_region }}"
     subnets: "{{ database_subnet_ids }}"
     ingress:
-      - [100, 'all', 'allow', '{{ vpc_cidr }}', 22, 22]        # SSH from VPC
-      - [110, 'all', 'allow', '{{ vpc_cidr }}', 3306, 3306]    # MySQL from VPC
-      - [120, 'all', 'allow', '{{ vpc_cidr }}', 5432, 5432]    # PostgreSQL from VPC
-      - [130, 'all', 'allow', '0.0.0.0/0', 1024, 65535]       # Ephemeral ports
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 22
+        to_port: 22      # SSH from VPC
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 3306
+        to_port: 3306    # MySQL from VPC
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 5432
+        to_port: 5432    # PostgreSQL from VPC
+      - rule_no: 130
+        protocol: tcp
+        action: allow
+        cidr_block: "0.0.0.0/0"
+        from_port: 1024
+        to_port: 65535   # Ephemeral ports
     egress:
-      - [100, 'all', 'allow', '0.0.0.0/0', 80, 80]           # HTTP for updates
-      - [110, 'all', 'allow', '0.0.0.0/0', 443, 443]         # HTTPS for updates
-      - [120, 'all', 'allow', '{{ vpc_cidr }}', 1024, 65535] # Ephemeral to VPC
+      - rule_no: 100
+        protocol: tcp
+        action: allow
+        cidr_block: "0.0.0.0/0"
+        from_port: 80
+        to_port: 80      # HTTP for updates
+      - rule_no: 110
+        protocol: tcp
+        action: allow
+        cidr_block: "0.0.0.0/0"
+        from_port: 443
+        to_port: 443     # HTTPS for updates
+      - rule_no: 120
+        protocol: tcp
+        action: allow
+        cidr_block: "{{ vpc_cidr }}"
+        from_port: 1024
+        to_port: 65535   # Ephemeral to VPC
     tags: "{{ common_tags | combine({'Name': db_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: db_nacl
 
